Update website content and styling

--- a/index.html
+++ b/index.html
@@ -33,5 +33,7 @@
             <td>Row 3, Cell 2</td>
         </tr>
     </table>
+    <p>And here is a link to <a href="https://www.example.com">Example</a>.</p>
+    
 </body>
 </html>
